--- a/Trycyle/app/src/main/AndroidManifest.xml
+++ b/Trycyle/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateAccount"></activity>
+        <activity android:name=".MainActivity_profile"></activity>
+        <activity android:name=".MainActivity_home" />
+        <activity android:name=".CreateAccount" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
